--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/material-nextjs": "^6.3.1",
+    "formik": "^2.4.6",
     "next": "15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-number-format": "^5.4.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
