--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
+    "@mui/lab": "^6.0.0-beta.28",
     "@mui/material": "^6.3.1",
     "@mui/material-nextjs": "^6.3.1",
+    "@types/nodemailer": "^6.4.17",
+    "@types/react-lottie": "^1.2.10",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.1",
     "next": "15.1.4",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-number-format": "^5.4.3"
+    "react-lottie": "^1.2.10",
+    "react-number-format": "^5.4.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
