--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-lottie": "^1.2.10",
     "formik": "^2.4.6",
     "framer-motion": "^12.0.1",
+    "lottie-react": "^2.4.1",
     "next": "15.1.4",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
