--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^6.0.0-beta.28",
     "@mui/material": "^6.3.1",
     "@mui/material-nextjs": "^6.3.1",
+    "@next/third-parties": "^15.3.0",
     "@types/nodemailer": "^6.4.17",
     "@types/react-lottie": "^1.2.10",
     "formik": "^2.4.6",
